K8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: aarohi-app-service
  namespace: aarohi-ai
spec:
  type: NodePort 
  selector:
    app: aarohi 
  ports:
    - protocol: TCP
      port: 5000       
      targetPort: 5000 
      nodePort: 32000
