K8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: aarohi-ai
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP # Only visible inside the cluster network
